# MYODataRecordingSystem

bringup/: package.xml
bringup/launch/: aruco_detect.launch  rs_d435i_hw.launch
cv_arm_detection/: CMakeLists.txt  package.xml
cv_arm_detection/cfg/: ArmDetection.cfg
cv_arm_detection/config/: pink.yaml
cv_arm_detection/include/: ocv_utils.h
cv_arm_detection/include/cv_arm_detection/: ArmDetection.h
cv_arm_detection/launch/: bgri.launch
cv_arm_detection/src/: ArmDetection.cpp  arm_detection_node.cpp  ocv_utils.cpp
dataset_generator/: CMakeLists.txt  package.xml
dataset_generator/include/dataset_generator/: DatasetGenerator.cpp  DatasetGenerator.h
dataset_generator/launch/: hw.launch
dataset_generator/src/: dataset_generator_node.cpp  fake_data_generation_node.cpp
pose_detection_interface/include/: SimpleIPC.h
pose_detection_interface/src/: SimpleIPC.cpp
sensor_read/: CMakeLists.txt  package.xml
sensor_read/msg/: MyoData.msg  MyoDataSingle.msg
sensor_read/src/: sensor_read_node.cpp
